# xgboost-udaf-ibis

./: README.md  flake.nix  pyproject.toml
letsql/examples/: pyaggregator.py
letsql/scripts/: xgboost_udaf_ibis.py
